# flutter_opencc_ffi

./: .gitmodules  README.md  copy_doc.bat  pubspec.yaml
android/: build.gradle  settings.gradle
example/: README.md  pubspec.yaml
example/assets/: opencc_assets.txt
example/integration_test/: opencc_test.dart
example/lib/: main.dart  utils.dart
example/test/: widget_test.dart
flutter_opencc_ffi/: CHANGELOG.md  README.md  pubspec.yaml
flutter_opencc_ffi/example/: pubspec.yaml
flutter_opencc_ffi/lib/: flutter_opencc_ffi.dart
flutter_opencc_ffi_android/: README.md  pubspec.yaml
flutter_opencc_ffi_android/android/: build.gradle  settings.gradle
flutter_opencc_ffi_ios/: README.md  pubspec.yaml
flutter_opencc_ffi_ios/ios/: flutter_opencc_ffi.podspec  flutter_opencc_ffi_ios.podspec
flutter_opencc_ffi_macos/: CHANGELOG.md  README.md  pubspec.yaml
flutter_opencc_ffi_native/: README.md  pubspec.yaml
flutter_opencc_ffi_platform_interface/: README.md  pubspec.yaml
flutter_opencc_ffi_web/: README.md  pubspec.yaml
flutter_opencc_ffi_windows/: README.md  pubspec.yaml
ios/: flutter_opencc_ffi.podspec
lib/: flutter_opencc_ffi.dart  flutter_opencc_ffi_method_channel.dart  flutter_opencc_ffi_platform_interface.dart
macos/: flutter_opencc_ffi.podspec
opencc_library/: interface.cpp  interface.def  interface.h
opencc_library/windows/: CMakeLists.txt  README.md  buid.bat
test/: flutter_opencc_ffi_method_channel_test.dart  flutter_opencc_ffi_test.dart
windows/: CMakeLists.txt  flutter_opencc_ffi_plugin.cpp  flutter_opencc_ffi_plugin_c_api.cpp
(+85 files in other folders)
